--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   google_fonts: ^5.1.0
   flutter_svg: ^2.0.7
   flashy_tab_bar2: ^0.0.6
+  firebase_core: ^2.15.1
+  cloud_firestore: ^4.9.1
 
 dev_dependencies:
   flutter_test:
