--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,20 @@ dependencies:
   flashy_tab_bar2: ^0.0.6
   firebase_core: ^2.15.1
   cloud_firestore: ^4.9.1
+  flutter_bloc: ^8.1.3
+  dartz: ^0.10.1
+  shared_preferences: ^2.2.1
+  equatable: ^2.0.5
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
+  build_runner: ^2.4.6
+  freezed: ^2.4.2
+  json_serializable: ^6.7.1
 
   flutter_lints: ^2.0.0
 
